# gpushare

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  mig_emulation.yaml  mps.yaml
data/: prompts.jsonl
report/: main.tex  references.bib  results_table.tex
runs/: summary_all.csv
runs/baseline/c1/: summary.json
runs/baseline/c12/: summary.json
runs/baseline/c16/: summary.json
runs/baseline/c2/: summary.json
runs/baseline/c24/: summary.json
runs/baseline/c4/: summary.json
runs/baseline/c8/: summary.json
runs/mig_emulation/c1/: summary.json
runs/mig_emulation/c12/: summary.json
runs/mig_emulation/c16/: summary.json
runs/mig_emulation/c2/: summary.json
runs/mig_emulation/c24/: summary.json
runs/mig_emulation/c4/: summary.json
runs/mig_emulation/c8/: summary.json
runs/mps/c1/: summary.json
runs/mps/c12/: summary.json
runs/mps/c16/: summary.json
runs/mps/c2/: summary.json
runs/mps/c24/: summary.json
runs/mps/c4/: summary.json
runs/mps/c8/: summary.json
runs/plots/: summary.csv
scripts/: analyze_results.py  index_runs.py  run_matrix.py
src/gpushare/: __init__.py  analysis.py  cli.py  config.py  loadgen.py  monitor.py  mps.py  runner.py  servers.py  types.py
