[project]
name = "gpushare"
version = "0.1.0"
description = "Mini-benchmarks for GPU sharing mechanisms in LLM serving (MPS, MIG-like emulation, logical sharing)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "aiohttp>=3.9",
  "tqdm>=4.66",
  "pynvml>=11.5",
  "requests>=2.31",
]

[project.optional-dependencies]
# Heavy deps are optional so the repo installs on machines without CUDA
cuda = [
  "torch>=2.2",
  "transformers>=4.41",
  "vllm>=0.5.0",
]

[project.scripts]
gpushare = "gpushare.cli:main"

[tool.ruff]
line-length = 100
